--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "@mui/icons-material": "^5.15.11",
+"@mui/material": "^5.15.11",
+"@emotion/react": "^11.11.4",
+"@emotion/styled": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
